# kotlinconf2024

./: LICENSE  build.gradle.kts  settings.gradle.kts
add/: Cargo.toml  add.asm  add3.asm
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/tarikeshaq/conferenceapp/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/tarikeshaq/conferenceapp/: MainActivity.kt
app/src/main/java/com/tarikeshaq/conferenceapp/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/tarikeshaq/conferenceapp/: ExampleUnitTest.kt
conference-core/: Cargo.toml
conference-core/src/: error.rs  lib.rs  models.rs  network.rs  store.rs
conference-uniffi/: Cargo.toml  uniffi-bindgen.rs
conference-uniffi/.cargo/: config.toml
conference-uniffi/src/: lib.rs
conference-wasm/: Cargo.toml  index.html  index.js
conference-wasm/src/: lib.rs
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
server/: index.js  package.json
