[package]
name = "conference-uniffi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uniffi = { version = "0.27.1", features = ["cli"]}
conference-core = { path = "../conference-core" }
async-trait = "0.1.80"
uuid = { version = "1.8.0", features = ["serde"] }
rand = "0.8.5"

[lib]
crate-type = ["cdylib"]
name = "conference"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

