[package]
name = "conference-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.80"
conference-core = { path = "../conference-core" }
js-sys = "0.3.69"
serde = { version = "1.0.201", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.117"
url = { version = "2.5.0", features = ["serde"] }
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3", features = ["Window", "Request", "Response", "console", "RequestInit", "RequestMode"] }

[lib]
crate-type = ["cdylib"]
